add router & add swaggo of update and delete todos
