# httpserver/controllers/params/todo.go
@@ -9,3 +9,7 @@ type TodoUpdateRequest struct {
 	Title  string `json:"title"`
 	Status string `json:"status"`
 }
+
+type TodoDeleteRequest struct {
+	ID int `validate:"required" json:"id"`
+}
