# httpserver/controllers/todo.go
@@ -13,7 +13,7 @@ import (
 // @Tags todos
 // @Accept  json
 // @Produce  json
-// @Success 200 {array} views.Response
+// @Success 200 {array} []models.Todo
 // @Router /todos [get]
 func GetTodos(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
@@ -43,5 +43,51 @@ func CreateTodo(w http.ResponseWriter, r *http.Request) {
 	}
 	json.NewEncoder(w).Encode(map[string]interface{}{
 		"data": todo,
+	})
+}
+
+// GetTodoById godoc
+// @Summary Get todo by id
+// @Description Get todo by id
+// @Tags todos
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.Todo
+// @Router /todos/{id} [get]
+func GetTodoById(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(map[string]interface{}{
+		"message": "ok",
+	})
+}
+
+// UpdateTodo godoc
+// @Summary Update todo
+// @Description Update todo
+// @Tags todos
+// @Accept  json
+// @Produce  json
+// @Param todo body params.TodoUpdateRequest true "Update Todo"
+// @Success 200 {array} models.Todo
+// @Router /todos/{id} [put]
+func UpdateTodo(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(map[string]interface{}{
+		"message": "ok",
+	})
+}
+
+// DeleteTodo godoc
+// @Summary Delete todo
+// @Description Delete todo
+// @Tags todos
+// @Accept  json
+// @Produce  json
+// @Success 200 {array} models.Todo
+// @Router /todos/{id} [delete]
+func DeleteTodo(w http.ResponseWriter, r *http.Request) {
+	w.Header().Set("Content-Type", "application/json")
+	json.NewEncoder(w).Encode(map[string]interface{}{
+		"message": "ok",
 	})
 }
